Closed
Bug 61519
Opened 25 years ago
Closed 25 years ago
crash in nsXBLPrototypeHandler::ExecuteHandler
Categories
(Core :: Layout, defect, P3)
Tracking
()
VERIFIED
FIXED
People
(Reporter: blizzard, Assigned: blizzard)
References
Details
Attachments
(1 file)
|
1.54 KB,
patch
|
Details | Diff | Splinter Review |
It's possible to crash in nsXBLPrototypeHandler::ExecuteHandler if no mozilla
window has gotten focus yet and you scroll the window using a scrollbar. The
scrollbar doesn't grab focus so no window is ever given focus. Another problem
is that doing a |QueryInterface| on the DOM event receiver to an |nsIContent|
interface will fail. That return isn't checked and will crash as well.
To reproduce this problem, fire up TestGtkEmbed to http://www.redhat.com. It
should be small enough that it shows a scrollbar. Grab the scrollbar slider and
slide it down the page. You will get an assertion and a crash.
Patch attached in a moment.
| Assignee | ||
Comment 1•25 years ago
|
||
| Assignee | ||
Comment 2•25 years ago
|
||
Adding pink in the hopes of getting some hot review action.
Comment 3•25 years ago
|
||
a=hyatt
| Assignee | ||
Comment 4•25 years ago
|
||
I think that this was fixed with the checkin that fixed 61452. Checking on
that. Hyatt, even if it was do you still want me to add these checks in?
Comment 5•25 years ago
|
||
I saw this problem too.
http://bugzilla.mozilla.org/show_bug.cgi?id=61510
Comment 6•25 years ago
|
||
Comment 7•25 years ago
|
||
this is definately different that what sfraser and I checked in earlier.
| Assignee | ||
Comment 8•25 years ago
|
||
OK, I'll check this in. Those other bugs look similar but not exactly the same.
pink, does this patch look OK to you? I should technically have two reviews
before checking it in.
Comment 9•25 years ago
|
||
i guess this looks ok, though i don't know this code at all. r=pink
Comment 10•25 years ago
|
||
*** Bug 61500 has been marked as a duplicate of this bug. ***
Comment 11•25 years ago
|
||
*** Bug 61548 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 12•25 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
*** Bug 59782 has been marked as a duplicate of this bug. ***
*** Bug 59930 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•