Fix bug #61519 crash in nsXBLPrototypeHandler::ExecuteHandler.  Check for the existance of a focused window and if a QueryInterace returns null. r=pinkerton sr=hyatt